refactor of user controller
