# backend/public/swagger.json
@@ -7,23 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IResponse": {
-				"properties": {
-					"statusCode": {
-						"type": "number",
-						"format": "double"
-					},
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"statusCode",
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"IUser": {
 				"properties": {
 					"id": {
@@ -61,39 +44,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IGetAllResponse": {
-				"properties": {
-					"response": {
-						"$ref": "#/components/schemas/IResponse"
-					},
-					"users": {
-						"items": {
-							"$ref": "#/components/schemas/IUser"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"response"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ICreateResponse": {
-				"properties": {
-					"response": {
-						"$ref": "#/components/schemas/IResponse"
-					},
-					"user": {
-						"$ref": "#/components/schemas/IUser"
-					}
-				},
-				"required": [
-					"response"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"ICreateBodyRequest": {
 				"properties": {
 					"firstName": {
@@ -114,21 +64,6 @@
 					"lastName",
 					"email",
 					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"IPatchResponse": {
-				"properties": {
-					"response": {
-						"$ref": "#/components/schemas/IResponse"
-					},
-					"user": {
-						"$ref": "#/components/schemas/IUser"
-					}
-				},
-				"required": [
-					"response"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -161,18 +96,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"IDeleteResponse": {
-				"properties": {
-					"response": {
-						"$ref": "#/components/schemas/IResponse"
-					}
-				},
-				"required": [
-					"response"
-				],
-				"type": "object",
-				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -188,19 +111,25 @@
 	"paths": {
 		"/users": {
 			"get": {
-				"operationId": "GetAll",
+				"operationId": "Get",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IGetAllResponse"
+									"items": {
+										"$ref": "#/components/schemas/IUser"
+									},
+									"type": "array"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Users"
+				],
 				"security": [],
 				"parameters": []
 			},
@@ -212,12 +141,20 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ICreateResponse"
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IUser"
+										}
+									],
+									"nullable": true
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Users"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -233,6 +170,41 @@
 			}
 		},
 		"/users/{userId}": {
+			"get": {
+				"operationId": "GetById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IUser"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			},
 			"patch": {
 				"operationId": "Patch",
 				"responses": {
@@ -241,12 +213,20 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IPatchResponse"
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IUser"
+										}
+									],
+									"nullable": true
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Users"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -278,12 +258,19 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IDeleteResponse"
+									"type": "number",
+									"enum": [
+										null
+									],
+									"nullable": true
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Users"
+				],
 				"security": [],
 				"parameters": [
 					{
